isadmin disabled; docker_exec detach variable need to be false on wignercloud

--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -12,11 +12,11 @@
 
 <div class="row">
 
-  <div class="col-md-3 col-sm-4 col-xs-6">
+  <div class="col-md-3 col-sm-4 col-xs-6" style="height:300px">
     <div class="thumbnail">
         <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: #dda7a7;text-align: center;">
   <img
-    src="https://s-media-cache-ak0.pinimg.com/736x/8e/e8/c8/8ee8c89916b2f9d9348bdbd4dea9240a.jpg" style="height: 70px;padding-top: 10px 0px 10px;"
+    src="http://www.compare-europe.eu/-/media/Sites/compare-europe/News/Procedure.ashx?mw=700" style="height: 70px;padding-top: 10px 0px 10px;"
     alt="Worksheets" >
             </div>
       <div class="caption">
@@ -32,7 +32,7 @@
     </div>
   </div>
 
-      <div class="col-md-3 col-sm-4 col-xs-6">
+      <div class="col-md-3 col-sm-4 col-xs-6" style="height:300px;">
     <div class="thumbnail">
         <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: blanchedalmond;text-align: center;">
       <img src="https://jupyter.readthedocs.io/en/latest/_static/_images/jupyter.svg" style="height: 60px;padding-top: 10px 0px 10px;" alt="Jupyter Notebook">
