--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -12,7 +12,7 @@
 
 <div class="row">
 
-  <div class="col-md-3 col-sm-4 col-xs-6" style="height:300px">
+  <div class="col-md-3 col-sm-4 col-xs-6" >
     <div class="thumbnail">
         <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: #dda7a7;text-align: center;">
   <img
@@ -20,28 +20,23 @@
     alt="Worksheets" >
             </div>
       <div class="caption">
-        <h3> Worksheets</h3>
-        <p>Run pre-compiled worksheets to hide program code and
-        focus on the problem.</p>
-        <p>Worksheets hide the complexity of notebooks from end users
-        interested in scientific output.</p>
+        <h3> Public Reports</h3>
+          <p>Access digested scientific output, meant for the general public.</p>
         <p><a href="{% url 'worksheets' %}" class="btn btn-primary" role="button">
-          <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>  to worksheets</a>
+          <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>  to reports</a>
             </p>
       </div>
     </div>
   </div>
 
-      <div class="col-md-3 col-sm-4 col-xs-6" style="height:300px;">
+      <div class="col-md-3 col-sm-4 col-xs-6" >
     <div class="thumbnail">
         <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: blanchedalmond;text-align: center;">
       <img src="https://jupyter.readthedocs.io/en/latest/_static/_images/jupyter.svg" style="height: 60px;padding-top: 10px 0px 10px;" alt="Jupyter Notebook">
             </div>
       <div class="caption">
-        <h3> Jupyter notebooks</h3>
-        
-        <p>Run existing or create Jupyter notebooks from existing projects to process your data
-            or author your own projects, notebooks and share with others.</p>
+        <h3> Notebook </h3>
+        <p>Manage private jupyter notebooks, meant for the individual reseracher.</p>
             {% if user.is_authenticated %}
         <p><a href="{% url 'notebooks' %}" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Browse notebooks</a>
             </p>
@@ -57,7 +52,7 @@
     </div>
       <div class="caption">
         <h3> Gitlab</h3>
-        <p>Manage your project, add members to it, file issues.</p>
+        <p>Manage projects and file issues, meant for the project manager.</p>
         {% if user.is_authenticated %}
         <p><a href="/gitlab" target="_blank" class="btn btn-primary" role="button">
         <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> to Gitlab</a>
@@ -74,7 +69,7 @@
             </div>
       <div class="caption">
         <h3> Owncloud</h3>
-        <p>Manage easily your data files through the owncloud... (just as easy as in Dropbox! :) )</p>
+        <p>Access private cloud file system, share data and results.</p>
         {% if user.is_authenticated %}
         <p><a href="/owncloud" target="_blank" class="btn btn-primary" role="button">
         <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> to Owncloud</a>
