--- a/kooplexhub/kooplex/hub/templates/app/project-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/project-partial.html
@@ -1,90 +1,98 @@
-﻿<!--<div style="display:inline; width:128px; height:128px">
+﻿
+<!--<div style="display:inline; width:128px; height:128px">
     {% if item.avatar_url %}
     <img src="{{ item.avatar_url }}" style="width:128px; height:128px" />
     {% endif %}
 </div> -->
 
-<div class="session">
-    <div class="session-details"><p>
+<div class=" col-md-12 col-sm-12 col-xs-12">
+    <div class="panel panel-primary ">
+        <div class="panel-heading">
+            <strong>{{ item.name }}</strong> {% if item.owner.username != username %} ( owned by {{ item.owner.username }} ) {%  endif  %}
+            {% if 'forked_from_project' in item %} : forked from
+                <a href="{{ base_url }}/gitlab/{{ item.forked_from_project.path_with_namespace }}" target="_blank">{{ item.forked_from_project.path_with_namespace }}</a>
+            {% endif %}
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class=" col-md-4 col-sm-4 col-xs-12">
+                    {{ item.description }}
+                </div>
+                <div class=" col-md-3 col-sm-3 col-xs-12">
+                    {% if not publicvar %}
 
-        <b>{{ item.name }} {% if item.owner.username != username %} ( owned by {{ item.owner.username }} ) {%  endif  %}</b>
-        {% if 'forked_from_project' in item %}
-            : forked from
-            <a href="{{ base_url }}/gitlab/{{ item.forked_from_project.path_with_namespace }}" target="_blank">
-                {{ item.forked_from_project.path_with_namespace }}
-            </a>
-        {% endif %}
-    </p>
-    <p>{{ item.description }}</p>    
-    </div>
-    <div class="session-buttons">
-    <!--<span class="readmore"><button>More</button></span>-->
-    <span class="session-button">
-          {% comment %}
-    {% if 'notebook' in item.variables %}
-    {% endcomment %}
-            {% if not publicvar %}
-        {% include 'app/notebooks-repo-pull-really.html' %}
+                    <a role="button" href="{% url 'notebooks-open' %}?project_id={{ item.id }}&project_owner={{ item.owner.username }}&project_name={{ item.name }}&repo={{ item.path_with_namespace }}{% if 'forked_from_project' in item %}&is_forked=True&project_id={{ item.id }}&target_id={{ item.forked_from_project.id }}{% else%}&is_forked=False{% endif %}">
+                        <button role="button" type="button" class="btn btn-success" >Start</button></a>
+                    <a role="button" href="{% url 'notebooks-commit' %}?project_owner={{ item.owner.username }}&project_name={{ item.name }}&notebook_path_dir={{ item.notebook_path }}&is_forked={{ item.is_forked }}">
+                        <button role="button" type="button" class="btn btn-warning">Commit</button></a>
 
-       <a role="button" href="{% url 'notebooks-open' %}?project_id={{ item.id }}&project_owner={{ item.owner.username }}&project_name={{ item.name }}&repo={{ item.path_with_namespace }}{% if 'forked_from_project' in item %}&is_forked=True&project_id={{ item.id }}&target_id={{ item.forked_from_project.id }}{% else%}&is_forked=False{% endif %}">
-          <button role="button" type="button" class="btn btn-default" >Start</button></a>
-       <a role="button" href="{% url 'notebooks-commit' %}?project_owner={{ item.owner.username }}&project_name={{ item.name }}&notebook_path_dir={{ item.notebook_path }}&is_forked={{ item.is_forked }}">
-          <button role="button" type="button" class="btn btn-default">Commit</button></a>
+                    {%  if publicvar %}
+                        <!-- {% if item.forkable %}-->
+                            <a href="{% url 'project-fork' %}?itemid={{ item.id }}" target="_blank"><span class="button commit">Fork it</span> </a>
+                        <!--{% else %}
+                            | it has been forked
+                        {% endif %}-->
+                    {%  endif %}
+                    {% endif %}
 
-    {% endif %}
-    {% comment %}
-    {% endif %}
-    {% endcomment %}
+                    {%  if not publicvar and item.forks_count > 0 %}
+                        <p> See the opened <a href="{% url 'notebooks-mergerequestlist' %}?itemid={{ item.id }}&path_with_namespace={{ item.path_with_namespace }}" target="_blank">merge requests</a>    </p>
+                    {% endif %}
 
-    {% if 'worksheet' in item.variables %}
-     <a role="button" href="{% url 'notebooks-view-deploy' %}?project_owner={{ item.owner.username }}&project_name={{ item.name }}&project_id={{ item.id}}">
-          <button role="button" type="button" class="btn btn-default">View deployed</button></a>
-    {% endif %}
+                </div>
+                <div class=" col-md-5 col-sm-5 col-xs-12">
 
-    <!-- | view in <a href="{{ base_url }}/gitlab/{{ item.path_with_namespace }}" target="_blank">Gitlab</a> -->
 
-    {%  if publicvar %}
-        {% if item.forkable %}
-            <a href="{% url 'project-fork' %}?itemid={{ item.id }}" target="_blank"><span class="button commit">Fork it</span> </a>
-        {% else %}
-            | it has been forked
-        {% endif %}
-    {%  endif %}
-    </span>
-    {%  if not publicvar and item.forks_count > 0 %}
-    <p>
-        See the opened <a href="{% url 'notebooks-mergerequestlist' %}?itemid={{ item.id }}&path_with_namespace={{ item.path_with_namespace }}" target="_blank">merge requests</a>
-    </p>
-    {% endif %}
-    </div>
-    <div class="session-container">
-    {%  if not publicvar %}
-     <div class="form-group">
-                        <label for="project.image">Revert your project</label><br>
-                        <select id="project.images" name="project.image">
-                            {% for commit in  item.commits   %}
-                            <option value="{{ commit.short_id }}">{{ commit.short_id }}
-                            {{ commit.author_name }} {{ commit.created_at }}  {{ commit.title }}  </option>
-                            {% endfor %}
-                        </select>
-                        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#repo-pull-{{ item.name }}">Revert</button>
-                    </div>
-    {% endif %}
+                        {%  if not publicvar %}
+                        <div class="row">
+                            <div class=" col-md-3 col-sm-3 col-xs-3">
+                            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#repo-pull-{{ item.name }}">Revert</button>
+                            {% include 'app/notebooks-revert.html' %}
+                            </div>
+                            <div class=" col-md-9 col-sm-9 col-xs-9">
+                            {%  with lastcommit=item.commits|last %}
+                                <p><strong>Message: </strong>{{ lastcommit.title }}</p>
+                                <p><strong>Created at: </strong>{{ lastcommit.created_at }}</p>
+                                <p><strong>Author: </strong>{{ lastcommit.author_name }}   </p>
+                            {% endwith %}
+                            </div>
+                        </div>
+                        {% endif %}
 
-    image: <strong> 
-    {% if 'container_image' in item.variables %}
-        {{ item.variables.container_image }}
-    {% endif %}
-    </strong>
-            {% if not publicvar %}
-    {% include 'app/notebooks-change-image.html' %}
-    <button type="button" class="btn btn-default" data-toggle="modal"  data-target="#change-image-{{ item.name  }}">Change</button>
+                        <div class="row">
+                        {% if not publicvar %}
 
-    {% include 'app/notebooks-delete-project.html' %}
-    <button type="button" class="btn btn-default" data-toggle="modal"  data-target="#delete-project-{{ item.name }}">Delete project</button>
-    {% endif %}
+                            <div class=" col-md-3 col-sm-3 col-xs-3">
+                            <button type="button" class="btn btn-info" data-toggle="modal"  data-target="#change-image-{{ item.name  }}">Change</button>
+                            {% include 'app/notebooks-change-image.html' %}
+                            </div>
 
-    </div>
+                        {% endif %}
+                        <div class=" col-md-9 col-sm-9 col-xs-9">
+                            image: <strong>
+                            {% if 'container_image' in item.variables %}
+                                {{ item.variables.container_image }}
+                            {% endif %}
+                        </div>
+                        </strong>
+                        </div>
+
+
+                        {% if not publicvar %}
+                            <div class="row">
+                            {% include 'app/notebooks-delete-project.html' %}
+                            <div class=" col-md-8 col-sm-8 col-xs-8">
+                            </div>
+                            <div class=" col-md-4 col-sm-4 col-xs-4">
+                            <button type="button" class="btn btn-danger" data-toggle="modal"  data-target="#delete-project-{{ item.name }}">Delete project</button>
+                            </div>
+                            </div>
+                        {% endif %}
+
+                </div>
+            </div>
+        </div>
+        </div>
 
 
 </div>
