--- a/kooplexhub/kooplex/hub/templates/app/worksheets.html
+++ b/kooplexhub/kooplex/hub/templates/app/worksheets.html
@@ -35,6 +35,7 @@
      </p>
      <p> {{ item.description }} </p>
     </div>
+        <!-- REMOVE DEPLOY check if user and owner the same -->
     {% endfor %}
    </div>
 
