--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -14,7 +14,7 @@
 
   <div class="col-md-3 col-sm-4 col-xs-6" >
     <div class="thumbnail">
-        <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: #dda7a7;text-align: center;">
+        <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: white;text-align: center;">
   <img
     src="http://www.compare-europe.eu/-/media/Sites/compare-europe/News/Procedure.ashx?mw=700" style="height: 70px;padding-top: 10px 0px 10px;"
     alt="Worksheets" >
@@ -31,7 +31,7 @@
 
       <div class="col-md-3 col-sm-4 col-xs-6" >
     <div class="thumbnail">
-        <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: blanchedalmond;text-align: center;">
+        <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: white;text-align: center;">
       <img src="https://jupyter.readthedocs.io/en/latest/_static/_images/jupyter.svg" style="height: 60px;padding-top: 10px 0px 10px;" alt="Jupyter Notebook">
             </div>
       <div class="caption">
@@ -40,6 +40,8 @@
             {% if user.is_authenticated %}
         <p><a href="{% url 'notebooks' %}" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Browse notebooks</a>
             </p>
+                {%  else %}
+                <p><a href="{% url 'login' %}" class="btn btn-default" > Login to browse notebooks</a></p>
             {% endif %}
       </div>
     </div>
@@ -47,7 +49,7 @@
 
         <div class="col-md-3 col-sm-4 col-xs-6">
     <div class="thumbnail">
-<div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: darkseagreen;text-align: center;">
+<div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: white;text-align: center;">
       <img src="https://about.gitlab.com/images/logo.png" style="height: 80px;padding:10px;" alt="GitLab">
     </div>
       <div class="caption">
@@ -57,6 +59,8 @@
         <p><a href="/gitlab" target="_blank" class="btn btn-primary" role="button">
         <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> to Gitlab</a>
             </p>
+            {%  else %}
+                <p><a href="{% url 'login' %}" class="btn btn-default" > Login to manage projects</a></p>
             {% endif %}
       </div>
     </div>
@@ -64,8 +68,8 @@
 
         <div class="col-md-3 col-sm-4 col-xs-6">
     <div class="thumbnail">
-        <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: #1d2d44;text-align: center;">
-      <img src="https://doc.owncloud.org/server/8.0/admin_manual/_static/img/logo_owncloud.svg" style="height: 70px;padding-top: 10px 0px 10px;background-color: #1d2d44;" alt="OwnCLoud Fileserver">
+        <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: white;text-align: center;">
+      <img src="https://raw.githubusercontent.com/docker-library/docs/9d36b4ed7cabc35dbd3849272ba2bd7abe482172/owncloud/logo.png" style="height: 70px;padding-top: 10px 0px 10px;" alt="OwnCLoud Fileserver">
             </div>
       <div class="caption">
         <h3> Owncloud</h3>
@@ -74,6 +78,8 @@
         <p><a href="/owncloud" target="_blank" class="btn btn-primary" role="button">
         <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> to Owncloud</a>
             </p>
+            {%  else %}
+                <p><a href="{% url 'login' %}" class="btn btn-default" > Login to access files</a></p>
             {% endif %}
       </div>
     </div>
