--- a/kooplexhub/kooplex/hub/templates/app/layout.html
+++ b/kooplexhub/kooplex/hub/templates/app/layout.html
@@ -25,13 +25,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'home' %}">Home</a></li>
-                    <li><a href="{% url 'worksheets' %}">Worksheets</a></li>
+                    <!-- <li><a href="{% url 'home' %}">Home</a></li> -->
+                    <li><a href="{% url 'worksheets' %}">Reports</a></li>
                     <li><a href="{% url 'notebooks' %}">Notebooks</a></li>
-                    <li><a href="/gitlab" target="_blank">Projects</a></li>
-                    <li><a href="/owncloud" target="_blank">Files</a></li>
-                    <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="{% url 'contact' %}">Contact</a></li>
+                    <li><a href="/gitlab" target="_blank">Gitlab</a></li>
+                    <li><a href="/owncloud" target="_blank">Owncloud</a></li>
+                    <!--<li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="{% url 'contact' %}">Contact</a></li> -->
                     {% if admin %}
                      <li><a href="{% url 'admin' %}">ADMIN</a></li>
                     {% endif %}
